--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>Background Color Changer</h1>
+    <h1>Switch to DarkMode</h1>
     <div id="container">
       <span>Choose a color</span>
       <select id="dropdown">
@@ -18,6 +18,9 @@
         <option value="yellow">Yellow</option>
       </select>
     </div>
+    <footer>
+       Report any issues <a href="https://github.com/rasikraj01/DarkMode/issues">here</a>.
+    </footer>
   </body>
 
   <script src="assets/js/popup.js"></script>
